Less style imports now working

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -1,10 +1,7 @@
-@body-bg: #000;
-@myDiv-fg: #f00;
+@body-bg: #CCC;
 
 body {
   background-color: @body-bg;
 }
 
-div.myDiv {
-  color: @myDiv-fg;
-}
+@import "./Header.less";
