Added basic Header and ButtonRow .less-styling

--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -1,7 +1,10 @@
 @body-bg: #CCC;
 
 body {
-  background-color: @body-bg;
+	margin: 0;
+	padding: 0;
+	background-color: @body-bg;
 }
 
 @import "./Header.less";
+@import "./ButtonRow.less";
