--- a/client/app/styles/Header.less
+++ b/client/app/styles/Header.less
@@ -1,3 +1,10 @@
-.Header {
-	color: red;
+.Header {	
+	width: 100%;
+	margin-bottom: 1em;
+	button {
+		clear: both;		
+		margin-left: 60%;
+		margin-top: -10%;
+		vertical-align: middle;
+	}
 }
