--- a/client/app/styles/ButtonRow.less
+++ b/client/app/styles/ButtonRow.less
@@ -1,11 +1,12 @@
 .ButtonRow {
 	width: 100%;
-	background-color: red;
 	position : absolute;
 	bottom : 0;
-	height : 80px;
+	height : @buttonRowHeight;
 	button {
 		display: block;
-		margin: 2em auto 2em;	
+		margin: 3em auto 2em;	
 	}
 }
+
+@import "./constants.less";
