Blocking now visibly disabling timer input

--- a/client/app/styles/Timer.less
+++ b/client/app/styles/Timer.less
@@ -2,16 +2,20 @@
 	width: 100%;
 	position: absolute;
 	bottom: @buttonRowHeight;
-	input {
-		width: 100%;
-		margin: auto;	
-		text-align: center;
-		direction:rtl;
-		border: none;
-		color: transparent;
-		text-shadow: 0 0 0 black;
-		&:focus {
-			outline: none;
-		}
+}
+
+input {
+	width: 100%;
+	margin: auto;
+	text-align: center;
+	direction:rtl;
+	border: none;
+	text-shadow: 0 0 0 black;
+	&:focus {
+		outline: none;
 	}
+}
+
+input:disabled {
+	background-color: transparent;
 }
