--- a/client/app/styles/Timer.less
+++ b/client/app/styles/Timer.less
@@ -10,9 +10,12 @@ input {
 	text-align: center;
 	direction:rtl;
 	border: none;
+	color: transparent;
 	text-shadow: 0 0 0 black;
 	&:focus {
 		outline: none;
+		outline-color: gray;
+		outline-style: solid;
 	}
 }
 
