Adder row styling complete

--- a/client/app/styles/ButtonRow.less
+++ b/client/app/styles/ButtonRow.less
@@ -2,11 +2,10 @@
 	width: 100%;
 	position : absolute;
 	bottom : 0;
-	height : @buttonRowHeight;
+	height : @bottomBarHeight;
 	button {
 		display: block;
 		margin: 3em auto 2em;	
 	}
 }
-
-@import "./constants.less";
+@import './constants.less';
