--- a/client/app/styles/Timer.less
+++ b/client/app/styles/Timer.less
@@ -1,7 +1,7 @@
 .Timer {
 	width: 100%;
 	position: absolute;
-	bottom: @buttonRowHeight;
+	bottom: @bottomBarHeight;
 
 	input {
 		width: 100%;
@@ -22,3 +22,5 @@
 		background-color: transparent;
 	}
 }
+
+@import './constants.less';
