--- a/client/app/styles/constants.less
+++ b/client/app/styles/constants.less
@@ -1,1 +1,19 @@
-@buttonRowHeight: 80px;
+//---------- MEASUREMENTS --------------
+@topBarHeight: 100px;
+
+@adderInputWidth: 400px;
+@adderInputFontSize: 40px;
+@adderButtonHeight: 50px;
+@adderButtonWidth: 90px;
+@adderButtonFontSize: 45px;
+
+@bottomBarHeight: 80px;
+
+//-------------- COLORS ----------------
+@brightWhite: #FFFFFF;
+@offWhite: #EAEFEC;
+@darkGrey: #504F54;
+@green: #27B56E;
+@darkGreen: #23A061;
+@clickGreen: #1C824F;
+@errorRed: #FE5F55;
