--- a/client/app/styles/constants.less
+++ b/client/app/styles/constants.less
@@ -7,11 +7,14 @@
 @adderButtonWidth: 90px;
 @adderButtonFontSize: 45px;
 
+@blockeesWidth: @adderInputWidth;
+
 @bottomBarHeight: 80px;
 
 //-------------- COLORS ----------------
 @brightWhite: #FFFFFF;
 @offWhite: #EAEFEC;
+@grey: #9D9BA5;
 @darkGrey: #504F54;
 @green: #27B56E;
 @darkGreen: #23A061;
