Bottom row and timer styling complete

--- a/client/app/styles/Adder.less
+++ b/client/app/styles/Adder.less
@@ -7,7 +7,7 @@
 		background-color: @offWhite;
 		color: @darkGrey;
 		position: absolute;
-		border-radius: 5px;
+		border-radius: @borderRadius;
 		border: none;
 		width: @adderInputWidth;
 		top: 50%;
@@ -31,7 +31,7 @@
 		margin-top: -@adderButtonHeight/2;
 		left: 50%;
 		margin-left: @adderInputWidth/2 - @adderButtonWidth/2 + 4px;
-		border-radius: 3.5px;
+		border-radius: @borderRadius;
 		font-size: @adderButtonFontSize;
 		border: 0;
 		&:hover {
