--- a/client/app/styles/constants.less
+++ b/client/app/styles/constants.less
@@ -3,13 +3,20 @@
 
 @adderInputWidth: 400px;
 @adderInputFontSize: 40px;
-@adderButtonHeight: 50px;
 @adderButtonWidth: 90px;
+@adderButtonHeight: 50px;
 @adderButtonFontSize: 45px;
 
 @blockeesWidth: @adderInputWidth;
 
-@bottomBarHeight: 80px;
+@timerWidth: 150px;
+
+@bottomBarHeight: 100px;
+@blockerButtonWidth: 170px;
+@blockerButtonFontSize: 30px;
+@blockerButtonHeight: 60px;
+
+@borderRadius: 3.5px;
 
 //-------------- COLORS ----------------
 @brightWhite: #FFFFFF;
