--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -13,6 +13,11 @@ body {
 @import './ButtonRow.less';
 
 @font-face {
+  font-family: "Raleway-Bold";
+  src: url('./fonts/Raleway-Bold.ttf');
+}
+
+@font-face {
   font-family: "Raleway";
   src: url('./fonts/Raleway-Regular.ttf');
 }
