Blockees list now scrollable

--- a/client/app/styles/Timer.less
+++ b/client/app/styles/Timer.less
@@ -3,6 +3,7 @@
 	position: absolute;
 	bottom: @bottomBarHeight;
 	box-shadow: 0 -2px 4px @offWhite;
+	background: @brightWhite;
 	input {
 		background: @offWhite;
 		position: relative;
