--- a/client/app/styles/Blockees.less
+++ b/client/app/styles/Blockees.less
@@ -18,7 +18,7 @@
 		border-bottom: 1px solid @offWhite;
 		&:last-of-type {
 			border-bottom: none;
-			padding-bottom: 1.5em;
+			margin-bottom: 1.5em;
 		}
 		button {
 			color: @grey;
