--- a/client/app/styles/Adder.less
+++ b/client/app/styles/Adder.less
@@ -14,6 +14,8 @@
 		margin-top: -@adderInputFontSize/2*1.2;
 		left: 50%;
 		font-size: @adderInputFontSize;
+		padding-left: 10px;
+		padding-right: 10px;
 		margin-left: -@adderInputWidth/2 - @adderButtonWidth/2;
 		&:focus {
 			outline: none;	
