--- a/client/app/styles/main.less
+++ b/client/app/styles/main.less
@@ -1,8 +1,9 @@
 body {
-	margin: 0;
-	padding: 0;
-	background-color: @brightWhite;
-	font-family: "Raleway", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: @brightWhite;
+  font-family: "Raleway", sans-serif;
+  -webkit-app-region: drag;
 }
 
 @import './constants.less';
